<resources>
    <string name="app_name">MountainApp</string>
    <string name="map">Mapa</string>
    <string name="trail">Szlaki</string>
    <string name="POI">Miejsca</string>
    <string name="shelter">Schroniska</string>
    <string name="weather">Pogoda</string>
    <string name="info">Wiedza</string>

    <string name="access_token">pk.eyJ1Ijoia3ViYWFhc3MiLCJhIjoiY2pvbGFjdHl3MDdxZTNwa2t2M2kyaGZtcCJ9._zLhrerhB6YjW4v_Mu-gog</string>

    <string name="user_location_permission_not_granted">Proszę zezwolic na usługę lokalizacji</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>

    <string name="temperature">Temperatura</string>
    <string name="condition">Warunki</string>
    <string name="location">Lokalizacja</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="date">Data</string>
    <string name="sunrise">Wschód</string>
    <string name="sunset">Zachód</string>
    <string name="wind">Wiatr</string>
    <string name="humidity">Wilgotnosc</string>
    <string name="yahoo">Powered by Yahoo!</string>
    <string name="shelter_name">Schronisko</string>

    <string name="phone_number">Numer telefonu</string>
    <string name="phone_number_txt">+48123456789</string>
    <string name="e_mail">E-mail</string>
    <string name="email_text">test@test.com</string>
    <string name="place_number">Ilość miejsc noclegowych</string>
    <string name="place_number_txt">10</string>
    <string name="card_payment">Płatność kartą</string>
    <string name="height">Wysokość</string>
    <string name="height_txt">%1$s m.n.p.m</string>
    <string name="webpage">Strona internetowa</string>
    <string name="webpage_txt">www.shelter.com</string>
    <string name="trail_condition_title">Warunki na szlakach</string>
    <string name="title_date">Title and Date</string>
    <string name="tourist_communicate_website">http://tpn.pl/zwiedzaj#komunikat-pogodowy</string>
    <string name="threats_title">Zagrożenia</string>
    <string name="advice_title">Zalecenia</string>
    <string name="closed_trail_title">Zamknięcia szlaków pieszych</string>
    <string name="additional_info_title">Informacje dodatkowe</string>
    <string name="Flashlight">Latarka</string>
    <string name="TOPR">Telefon do TOPR</string>
    <string name="emergency_phone">+48601100300</string>
    <string name="help">TOPR</string>
    <string name="avalanche_website">"http://lawiny.topr.pl/viewpdf"</string>
    <string name="avalanche">Komunikat Lawinowy</string>
    <string name="navigationButton">Rozpocznij nawigację</string>
    <string name="trail_map">Schemat szlaków pieszych</string>
    <string name="cycle_map">Schemat szlaków rowerowych</string>


    <string-array name="info_list">
        <item>Komunikat turystyczny TPN</item>
        <item>Komunikat lawinowy</item>
        <item>Opłaty</item>
        <item>Bezpieczeństwo</item>
        <item>Zasady</item>
    </string-array>
</resources>
