<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity"
    android:orientation="horizontal"
    android:columnCount="2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2">

        <include layout="@layout/toolbar" />

        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/location"
            android:text="@string/location"
            android:textStyle="bold"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="35sp"
            android:paddingTop="15sp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/na"
        android:contentDescription="@string/condition_icon"
        android:layout_column="0"
        android:layout_row="1" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textSize="40sp"/>

    <ImageView
        android:id="@+id/sunrise_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sunrise_icon"
        android:layout_gravity="fill_horizontal"
        android:layout_column="0"
        android:layout_row="2"
        android:paddingTop="10sp"
        android:paddingBottom="10sp" />

    <ImageView
        android:id="@+id/sunset_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sunset_icon"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_gravity="fill_horizontal"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"/>

    <ImageView
        android:id="@+id/wind_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wind_icon"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_gravity="fill_horizontal"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"/>

    <ImageView
        android:id="@+id/humidity_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/humidity_icon"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_gravity="fill_horizontal"
        android:paddingTop="10sp" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunset"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:text="@string/wind"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal|center_vertical" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5"
        android:text="@string/humidity"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal|center_vertical"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/yahoo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yahoo"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="@android:color/holo_blue_dark" />
    </LinearLayout>


</GridLayout>